--- a/index.html
+++ b/index.html
@@ -1,64 +1,91 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UNIVERSO'S BOOK</title>
-    <link rel = "stylesheet" href = "style.css">
-    <link rel = "stylesheet" href = "reset.css">
-    <link rel = "stylesheet" href = "header.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
-<header class = "cabecalho">
+<header class="cabecalho">
 
-    <div class = "container">
-        <input type = "checkbox" id = "menu" class = "container__botao">
-        <label for = "menu">
-            <span class = "cabecalho__menu-hamburguer"></span>
+    <div class="container">
+        <input type="checkbox" id="menu" class="container__botao">
+        <label for="menu">
+            <span class="cabecalho__menu-hamburguer"></span>
         </label>
 
-        <ul class = "lista-menu">
-            <li class = "lista-menu__titulo">CATEGORIAS</li>
-            <li class = "lista-menu__item"> <a href = "#" class = "lista-menu__link"> Programação  </a> </li> 
-         <li class = "lista-menu__item"> <a href = "#" class = "lista-menu__link"> Romance </a> </li> 
-         <li class = "lista-menu__item"> <a href = "#" class = "lista-menu__link"> Ficção Científica </a> </li> 
-         <li class = "lista-menu__item"> <a href = "#" class = "lista-menu__link"> Diversos </a> </li> 
-        </ul> 
+        <ul class="lista-menu">
+            <li class="lista-menu__titulo">CATEGORIAS</li>
+            <li class="lista-menu__item"> <a href="#" class="lista-menu__link"> Programação </a> </li>
+            <li class="lista-menu__item"> <a href="#" class="lista-menu__link"> Romance </a> </li>
+            <li class="lista-menu__item"> <a href="#" class="lista-menu__link"> Ficção Científica </a> </li>
+            <li class="lista-menu__item"> <a href="#" class="lista-menu__link"> Diversos </a> </li>
+        </ul>
 
-       <a href = "#"> <img src = "IMG/Logo.svg" alt = "logotipo do aplicativo"> </a>
+        <a href="#"> <img src="IMG/Logo.svg" alt="logotipo do aplicativo"> </a>
 
     </div>
 
-    <div class ="container">
-       <a href = "#"> <img src = "IMG/Favoritos.svg" alt = "favoritos" class = "container__imagem"> </a>
-       <a href = "#"> <img src = "IMG/Compras.svg"  alt = "sacola de compras" class = "container__imagem"> </a>
-       <a href = "#"> <img src = "IMG/Usuário.svg" alt = "meu perfil" class = "container__imagem"> </a>
+    <div class="container">
+        <a href="#"> <img src="IMG/Favoritos.svg" alt="favoritos" class="container__imagem"> </a>
+        <a href="#"> <img src="IMG/Compras.svg" alt="sacola de compras" class="container__imagem"> </a>
+        <a href="#"> <img src="IMG/Usuário.svg" alt="meu perfil" class="container__imagem"> </a>
     </div>
 
 </header>
 
 <body>
-    
+
     <!--ADICIONAR A TAG SECTION COM A CLASSE BANNER-->
     <section class="BANNER">
         <h1 class="banner__titulo">Universos book</h1>
         <p class="banner__texto">Aqui voce encontra o livro que voce precisa</p>
         <h2 class="banner__titulo"> já sabe por onde comecar?</h2>
         <p class="banner__texto">encontre o livro que precisa para o seu desenvolvimento</p>
-        <input type="search" class= "banner__pesquisa" placeholder="qual sua proxima leitura?">
-      </section>
-   
+        <input type="search" class="banner__pesquisa" placeholder="qual sua proxima leitura?">
+    </section>
+
 
     <!--ADICIONAR A TAG SECTION COM A CLASSE CARROSSEL-->
     <section class="carrossel">
         <div class="swiper">
+            <h2 class="carrossel__titulo"> NOVOS LANÇAMENTOS</h2>
+
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"> <img src="img/ApacheKafka.png" alt="livro de Programação"> </div>
+                <div class="swiper-slide"> <img src="img/LideranЗa.png"
+                        alt="livro que fala sobre liderança em empresas"></div>
+                <div class="swiper-slide"> <img src="img/Javascript.png" alt="livro de  programação em javascrip"></div>
+                <div class="swiper-slide"> <img src="img/Guia Front-end.png" alt="guia de programçao em font-end"></div>
+                <div class="swiper-slide"> <img src="img/Portugol.png" alt="livro sobre programação em portugues"></div>
+                <div class="swiper-slide"> <img src="img/CarreiraSemFronteira.png"
+                        alt="livro sobre como alavancar a carreira no exterior"></div>
+            </div>
+        </div>
+
+        <div class=" swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+
+        <div class="card">
+            <div class="card__descricao">
+                <h3 class=" descricao__titulo"> TALVEZ VOCE SE INTERESSE</h3>
+                <p class="descricao__subtitulo"> ANGULAR 11 E FIREBASE</p>
+
+            </div>
+
 
         </div>
 
     </section>
 </body>
+
 </html>
-       
