--- a/index.html
+++ b/index.html
@@ -77,13 +77,19 @@
 
         <div class="card">
             <div class="card__descricao">
-                <h3 class=" descricao__titulo"> TALVEZ VOCE SE INTERESSE</h3>
-                <p class="descricao__subtitulo"> ANGULAR 11 E FIREBASE</p>
+                <h3 class =" descricao__titulo"> TALVEZ VOCE SE INTERESSE</h3>
+                <p class ="descricao__subtitulo"> ANGULAR 11 E FIREBASE</p>
+                <p class ="descricao__subtitulo">Construindo uma aplicação integrada com a plataforma do Google</p>
+                <img src ="img/Angular-1.png" alt ="Livro que aborda assuntos de programação" class="descricao__imagem">
+             </div>
+         </div>
 
-            </div>
-
-
-        </div>
+         <div class="card__botoes">
+            <ul class="botoes">
+                <li class="botoes__item">Favoritos</li>
+             <img src="img/Favoritos.svg" alt=" icone de favoritos>
+            </ul>
+           </div>
 
     </section>
 </body>
