--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <div class="swiper-slide"> <img src="img/Javascript.png" alt="livro de  programação em javascrip"></div>
                 <div class="swiper-slide"> <img src="img/Guia Front-end.png" alt="guia de programçao em font-end"></div>
                 <div class="swiper-slide"> <img src="img/Portugol.png" alt="livro sobre programação em portugues"></div>
-                <div class="swiper-slide"> <img src="img/CarreiraSemFronteira.png"
-                        alt="livro sobre como alavancar a carreira no exterior"></div>
+                <div class="swiper-slide"> <img src="img/CarreiraSemFronteira.png" </div>
+                <div class    alt="livro sobre como alavancar a carreira no exterior"</div>
             </div>
         </div>
 
@@ -88,10 +88,37 @@
             <ul class="botoes">
                 <li class="botoes__item">Favoritos</li>
              <img src="img/Favoritos.svg" alt=" icone de favoritos>
+             
+             <ul class = "botoes__item">
+                <img src="img/Compras.svg" alt="icone de compras">
+             </ul>
+
+             <a href="#" class="botoes__ancora">SAIBA MAIS</a>
             </ul>
            </div>
 
     </section>
+
+    <section class="carrossel">
+        <h2 class="carrossel__titulo"> MAIS VENDIDOS</h2>
+    </section>
+
+    <div class="swiper">
+        <div class="swiper-wrapper"> </div>
+        <div class="swiper_pagination"> </div>
+    <div class="swiper-slide"> <img src="img/Angular-2.png" alt="livro de programação vol 2"> </div>
+    <div class="swiper-slide"> <img src="img/Caelum.png" alt="livro sobre tecnologia"> </div>
+    <div class="swiper-slide"> <img src="img/Estrelinhas.png" alt="livro sobre astronomia "> </div>
+    <div class="swiper-slide"> <img src="img/MusicDot.png" alt="livro sobre musica e cifras"> </div>
+    <div class="swiper-slide"> <img src="img/Rectangle 30.png" alt="livro sobre geometria "> </div>
+    <div class="swiper-slide"> <img src="img/HipstersTech.png" alt="livro sobre tecnologias atuais"> </div>
+   
+   
+   
+
+</div>
+
+
 </body>
 
 </html>
