--- a/index.html
+++ b/index.html
@@ -113,12 +113,10 @@
     <div class="swiper-slide"> <img src="img/Rectangle 30.png" alt="livro sobre geometria "> </div>
     <div class="swiper-slide"> <img src="img/HipstersTech.png" alt="livro sobre tecnologias atuais"> </div>
    
-   
-   
+   </div>
 
-</div>
-
-
+<div class=" swiper-button-prev"></div>
+<div class="swiper-button-next"></div>
 </body>
 
 </html>
