--- a/index.html
+++ b/index.html
@@ -117,6 +117,20 @@
 
 <div class=" swiper-button-prev"></div>
 <div class="swiper-button-next"></div>
+
+<div class="topicos">
+    <h2 class="topicos_titulo"> topicos visitados recentemente</h2>
+    <ul class="topicos_lista">
+     <li> fisica</li>
+     <li> astronomia</li>
+     <li> calculo</li>
+     <li> liguagem de programação</li>
+     <li> tecnologia</li>
+     <li> telescopios</li>
+    
+    </ul>
+     
+</div>
 </body>
 
 </html>
